--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
     </head>
 
     <body>
-        <h1>dynamic server</h1>
+        <h1>dynamic server demo</h1>
+        <button onclick="location.href='./register.html'">点击演示</button>
     </body>
 
 </html>
