--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <h1>dynamic server demo</h1>
-        <button onclick="location.href='./register.html'">点击演示</button>
+        <button onclick="location.href='./register.html'">点我演示</button>
     </body>
 
 </html>
